sdk/cgo/libravdb.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/xDarkicex/libravdb/sdk/cgo */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "main.go"

#include <stdlib.h>

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern int OpenDB(char* path);
extern int CloseDB(int dbID);
extern int CreateCollection(int dbID, char* name, int dim);
extern int GetCollection(int dbID, char* name);
extern char* InsertVector(int colID, char* id, float* vec, int dim, char* metadataJSON);
extern char* DeleteVector(int colID, char* id);
extern char* UpsertVector(int colID, char* id, float* vec, int dim, char* metadataJSON);
extern char* OptimizeCollection(int dbID, char* name);
extern char* GetCollectionStats(int colID);
extern char* QueryVector(int colID, float* vec, int dim, int limit, char* filterJSON);
extern char* ScanCollection(int colID, int offset, int limit);
extern char* UpdateVector(int colID, char* id, float* vec, int dim, char* metadataJSON);
extern char* InsertBatch(int colID, char** ids, float* vecs, int count, int dim, char** metas);
extern char* DeleteBatch(int colID, char** ids, int count);
extern char* ListCollections(int dbID);
extern char* DeleteCollection(int dbID, char* name);
extern char* Vacuum(int dbID);
extern char* Backup(int dbID, char* dest);
extern char* DropDatabase(int dbID);
extern char* SetGlobalMemoryLimit(int dbID, long long limit);
extern char* GetGlobalMemoryUsage(int dbID);
extern char* TriggerGlobalGC(int dbID);
extern char* Ping(int dbID);
extern char* GetDatabaseHealth(int dbID);
extern char* GetDatabaseStats(int dbID);
extern char* GetVector(int colID, char* id);
extern long long GetCollectionCount(int colID);
extern char* UpdateVectorIfVersion(int colID, char* id, float* vec, int dim, char* metadataJSON, unsigned long long expectedVersion);
extern char* DeleteVectorIfVersion(int colID, char* id, unsigned long long expectedVersion);
extern char* SetCollectionMemoryLimit(int colID, long long limit);
extern char* GetCollectionMemoryUsage(int colID);
extern char* TriggerCollectionGC(int colID);
extern char* EnableMemoryMapping(int colID, char* path);
extern char* DisableMemoryMapping(int colID);
extern char* SaveIndex(int colID, char* path);
extern char* LoadIndex(int colID, char* path);
extern void FreeString(char* str);

#ifdef __cplusplus
}
#endif